# instavid

./: .env.public  .gitignore  README.md  components.json  drizzle.config.ts  next.config.js  next.config.ts  package-lock.json  package.json
Docs/: 1.Text2Script.MD  2.Script2voice.MD  3.OpenAI Whisper.MD  4.Makeimage.MD  5.Flux.MD  6.Select BG.MD  7.MoviePy.MD  8.Workflow.MD  PRD.MD
app/: layout.tsx  page.tsx
app/api/current-project/: route.ts
app/api/generate-image/: route.ts
app/api/generate-image-prompts/: route.ts
app/api/generate-script/: route.ts
app/api/generate-subtitles/: route.ts
app/api/generate-video/: route.ts
app/api/generate-voice/: route.ts
app/api/generate-youtube-metadata/: route.ts
app/api/music-list/: route.ts
app/api/projects/: route.ts
app/api/python/: route.ts
app/dashboard/: page.tsx
backend/: README.md  config.py  main.py  pyproject.toml  requirements.txt
backend/app/: main.py  models.py
backend/app/core/: config.py
backend/app/models/: video.py
backend/app/services/: animation_effects.py  image_processor.py  subtitle_processor.py  video_generator.py
backend/app/utils/: gpu.py
components/: ClientLayout.tsx  ClientOnly.tsx  ImageGenerator.tsx  MusicSelector.tsx  PromptGenerator.tsx  ScriptGenerator.tsx  Sidebar.tsx  SubtitleGenerator.tsx  VideoEditor.tsx  VoiceGenerator.tsx
db/: index.ts  schema.ts
drizzle/: 0000_curly_ink.sql  0001_update_timestamps.sql
drizzle/meta/: 0000_snapshot.json  _journal.json
store/: project.ts
types/: index.ts
utils/: date.ts  project.ts
(+1 files in other folders)
