[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["haru <godjaewook@naver.com>"]
readme = "README.md"
package-mode = false
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = ">=3.11"
annotated-types = "0.7.0"
anyio = "4.8.0"
certifi = "2025.1.31"
charset-normalizer = "3.4.1"
click = "8.1.8"
decorator = "4.4.2"
fastapi = "0.115.8"
h11 = "0.14.0"
idna = "3.10"
imageio = "2.37.0"
imageio-ffmpeg = "0.6.0"
moviepy = "1.0.3"
numpy = "2.2.2"
opencv-python = "4.11.0.86"
pillow = "10.4.0"
proglog = "0.1.10"
pydantic = "2.10.6"
pydantic-core = "2.27.2"
python-dotenv = "1.0.1"
requests = "2.32.3"
sniffio = "1.3.1"
starlette = "0.45.3"
tqdm = "4.67.1"
typing-extensions = "4.12.2"
urllib3 = "2.3.0"
uvicorn = "0.34.0"
opencv-python-headless = ">=4.11.0.86,<5.0.0.0"

[tool.poetry.group.dev.dependencies]
uvicorn = {extras = ["standard"], version = "^0.34.0"}

[tool.poetry.scripts]
server = "app.main:run_server"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
